--- a/src/pages/posts/post1.mdx
+++ b/src/pages/posts/post1.mdx
@@ -1,6 +1,6 @@
 ---
 layout: "../../layouts/Products.astro"
-title: "Mi primer post en MDX"
+title: ""
 ---
 
 # ¡Hola, mundo!
@@ -9,4 +9,7 @@ Este es un ejemplo de cómo usar un layout en Astro con MDX.
 
 # asjkansk
 
-dklsdlskldklsdlk
+dklsdlskldklsdlk 
+
+1
+
