--- a/src/pages/posts/post1.mdx
+++ b/src/pages/posts/post1.mdx
@@ -1,15 +1,9 @@
 ---
 layout: "../../layouts/Products.astro"
-title: ""
+title: "Titulo 1"
 ---
 
 # ¡Hola, mundo!
-
 Este es un ejemplo de cómo usar un layout en Astro con MDX.
 
-# asjkansk
-
-dklsdlskldklsdlk 
-
-1
-
+# 'Hol'
